# streamsplit

./: Cargo.toml  README.md  rustfmt.toml
src/: lib.rs  main.rs  syscall_wrappers.rs  transfer.rs
