[package]
name = "streamsplit"
version = "0.1.1"
authors = ["Jan Kanis <jan.code@jankanis.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
once_cell = "1.7"
hex = "0.4"
libc = "0.2"
num-traits = "0.2"